--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Playback</title>
   </head>
-  <body oncontextmenu="return false;" ondragstart="return false;" onselectstart="return false;">
+  <body oncontextmenu="return false;" ondragstart="return false;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
